--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     package="com.example.duthientan.searchimagetool" >
 
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -25,7 +28,23 @@
         </activity>
         <activity
             android:name=".WebViewActivity"
-            android:label="@string/title_activity_web_view" >
+            android:label="@string/title_activity_web_view"
+            android:theme="@style/Theme.AppCompat.NoActionBar" >
+        </activity>
+        <activity
+            android:name=".SearchActivity"
+            android:label="@string/title_activity_search"
+            android:theme="@style/AppTheme.Search" >
+        </activity>
+        <activity
+            android:name=".ImageOnline"
+            android:label="@string/title_activity_image_online"
+            android:theme="@style/AppTheme.Search" >
+        </activity>
+        <activity
+            android:theme="@style/AppTheme.Search"
+            android:name=".FolderImageActivity"
+            android:label="@string/title_activity_folder_image" >
         </activity>
     </application>
 
